[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdarl"
version = "0.1.2"
description = "A lightweight implementation of Policy Dual Averaging (PDA) for reinforcement learning in PyTorch."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

keywords = [
  "reinforcement learning",
  "PDA",
  "policy dual averaging",
  "pytorch",
  "policy optimization",
  "rl",
  "gymnasium",
  "PMD",
  "policy mirror descent",
  "mujoco",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "gymnasium>=1.0.0",
  "numpy>=1.24.0",
  "torch>=2.0.0",
  "pytorch-optimizer>=3.0.0",
  "PyYAML>=6.0",
  "tensorboard>=2.0.0",
]

[project.optional-dependencies]
mujoco = ["gymnasium[mujoco]>=1.0.0"]
track = ["wandb>=0.15.0"]
dev = [
  "build",
  "pytest",
  "twine",
]
all = ["pdarl[mujoco,track]"]

[project.scripts]
pdarl-run = "pdarl.__main__:main"

[project.urls]
Homepage = "https://github.com/JGIoA/pdarl"
Repository = "https://github.com/JGIoA/pdarl"

[tool.hatch.build.targets.wheel]
packages = ["pdarl"]
